--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"> </script>
-    </head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/javascript.js"></script>
+      </head>
+
     <body>
         <section  id="home">
             <div id="cabecalho">
@@ -211,7 +214,7 @@
             </div>
             <div id="topo">
 
-             <a href="#home"  class="btn" ><img src="img/proximo (1).png"></a></div>
+             <a href="#home"  class="btnsubir" ><img src="img/proximo.png"></a></div>
           </div> 
           <a href="https://www.flaticon.com/br/icones-gratis/proximo" title="próximo ícones">Próximo ícones criados por Kiranshastry - Flaticon</a>
         </section>
